bk_ida/gccida/g1/compare_constant_1
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/compare_constant_1/src/varasm.c:3116:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v22; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/compare_constant_1/src/varasm.c:3120:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+20h] [rbp-50h] BYREF 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/compare_constant_1/src/varasm.c:3301:7: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
v22 = lang_hooks_0.expand_constant( exp); 
      ^~~~~~~~~~~~
      lang_hooks
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/compare_constant_1/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/compare_constant_1/src/varasm.c:3301:35: error: called object type '<dependent type>' is not a function or function pointer
v22 = lang_hooks_0.expand_constant( exp); 
                                  ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/compare_constant_1/src/obj/varasm.o] Error 1
